# NIRS-Viz

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  update_submodules.bat
data/: INVESA~1.mtl  T1_MRI~1.mtl  example.snirf
data/Colin/anatomical/: cortex_mesh.mat  cortex_reduced.mat  load_and_align.m  scalp_mesh.mat  scalp_reduced.mat  surf_to_obj_mesh.m  vox_to_obj_mesh.m
data/Shaders/: Landmark.frag  Landmark.vert  point.frag  point.vert  refpoints.frag  refpoints.vert  shader.frag  shader.vert
include/: Camera.h  Cortex.h  DjikstraSolver.h  Head.h  Line.h  Mesh.h  PointRenderer.h  Probe.h  RayIntersection.h  Raycaster.h  ReferencePoints.h  Shader.h  Snirf.h  TestLayer.h  Transform.h  Vertex.h  pch.h  test.h
include/Core/: Application.h  Base.h  Input.h  Layer.h  Window.h
include/Events/: KeyEvent.h  MouseEvent.h
include/GUI/: ImGuiLayer.h
include/Renderer/: Camera.h  FreeRoamCamera.h  OrbitCamera.h
resources/: create_vol_obj.m  load_vox.m
resources/AV_mesh_exporter/: create_surf_obj.m  get_mesh.mlx  read_isosurface.m
src/: Camera.cpp  Cortex.cpp  DjikstraSolver.cpp  Head.cpp  Line.cpp  Mesh.cpp  PointRenderer.cpp  Probe.cpp  Raycaster.cpp  ReferencePoints.cpp  Shader.cpp  Snirf.cpp  TestLayer.cpp  Transform.cpp  main.cpp  retrieve_share.cpp
src/Core/: Application.cpp  Input.cpp  Layer.cpp  Window.cpp
src/GUI/: ImGuiLayer.cpp
src/Renderer/: Camera.cpp  FreeRoamCamera.cpp  OrbitCamera.cpp
